--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
-body {
-	background: lightblue;
-}
+<head>
+<style>
 
 h1 {
     color: navy;
     margin-left: 20px;
 }
+
+body {
+	background: lightblue;
+}
+
+
+</style>
+</head>
